# claw-core

./: .gitignore  .kilocodemodes  404.html  AGENTS.md  Cargo.toml  README-zh-Hans.md  README-zh-Hant.md  README.md  kilocode.json
.codex/: config.toml
.github/workflows/: ci.yml  github-pages.yml  release-openclaw.yml  release-zeroclaw-crate.yml  release.yml
.kilocode/rules/: i18n.md  page-templates.md  project-structure.md  routing.md  workflows.md
.kilocode/rules-claw-assistant/: 01-qa-workflow.md
.kilocode/rules-claw-developer/: 01-tool-selection.md  02-coding-workflow.md  03-cross-mode-referrals.md
.kilocode/rules-codex/: 01-codex-workflow.md
.kilocode/rules-planner/: 01-planning-workflow.md
.kilocode/rules-tdd/: 01-red-green-refactor.md
apps/web/: Cargo.toml  Dioxus.toml  index.html
apps/web/assets/css/: base.css  landing.css
apps/web/locales/: en-US.ftl  zh-CN.ftl  zh-TW.ftl
apps/web/public/css/: base.css  landing.css
apps/web/src/: layout.rs  main.rs  routes.rs
assets/: claw-web-dxh48e06ea0fd1f2797.js  claw-web_bg-dxh72717ed735718c6.wasm
book/: README.md  book.toml  index.html
book/book/: api-spec.html  architecture.html  index.html  introduction.html  openclaw-integration.html  resource-control.html  searcher-c2a407aa.js  searchindex-3a1e89ec.js  searchindex-44812603.js  searchindex-5f74006c.js  searchindex-917b6e83.js  searchindex-b7e232a4.js  security.html  session-lifecycle.html  toc-876e0338.js  (+1 more)
crates/claw-core-protocol/: Cargo.toml  README.md
crates/claw-core-protocol/src/: client.rs  lib.rs  types.rs
css/: landing.css
js/: landing-motion.js
plugin/: .npmignore  ARCHITECTURE.md  README-zh-Hans.md  README-zh-Hant.md  README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
scripts/: README.md  book-locale-switcher.js  build-dev.sh  build-github.sh  claw-core-skills.list  claw_core_daemon.sh  claw_core_exec.py  claw_core_sessions.py  claw_core_shell_wrapper.sh  claw_core_stats.py  claw_status.py  claw_status_nc.sh  cron_helper.py  install-claw-core-openclaw.sh  install-from-release.sh  pre-push-test.sh  remove-claw-core-openclaw.sh  run-dev.sh  serve-dev.sh  serve-dist.sh  smoke.sh  status_dashboard.py  test_fork.sh  verify_integration.sh  wasm-opt-noop.sh
src/: config.rs  lib.rs  main.rs
(+144 files in other folders)
